syntax = "proto3";

package proof;

import "commitment.proto";

service StateProofService {
  rpc RequestStateProof(StateProofRequest) returns (StateProofResponse) {}
}

message StateProofRequest {
  // The key of the Fabric state (e.g. "marble1")
  string key = 1;
  commitment.Commitment commitment = 2;
}

message StateProofResponse {
  oneof response {
    Proof proof = 1;
    string error = 2;
  }
}

message Proof {
  // JSON string representation of the KVWrite state
  string state = 1;
  // String representation of the nonce BigInteger
  string nonce = 2;
  // String representation of the proof BigInteger
  string proof = 3;
  //String representation of the accumulator value
  string a = 4;
  // String representation of the n BigInteger
  string n = 5;
}
